kubernetes/09-istio-gateway.yaml
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: frontend-gateway
# spec:
#   selector:
#     istio: ingressgateway # use Istio default gateway implementation
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - "*"
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: frontend-ingress
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - frontend-gateway
#   http:
#   - route:
#     - destination:
#         host: frontend
#         port:
#           number: 80
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: frontend
# spec:
#   hosts:
#   - "frontend.default.svc.cluster.local"
#   http:
#   - route:
#     - destination:
#         host: frontend
#         port:
#           number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: whitelist-egress-googleapis
spec:
  hosts:
    - "accounts.google.com" # Used to get token
    - "*.googleapis.com"
  ports:
    - number: 80
      protocol: HTTP
      name: http
    - number: 443
      protocol: HTTPS
      name: https
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: whitelist-egress-google-metadata
spec:
  hosts:
    - metadata.google.internal
  addresses:
    - 169.254.169.254 # GCE metadata server
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
---
